// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`head.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<head>
  <% %> <% %>
<%= if  do %>
    <meta />
<% %>
      <% %>
  <meta />
<% else %>
    <meta />
    <% %>
<% end %>
  <meta /> <% %>
</head>

=====================================output=====================================
<head>
  <%  %>
  <%  %>
  <%= if  do %>
    <meta />
    <%  %>
    <%  %>
    <meta />
  <% else %>
    <meta />
    <%  %>
  <% end %>
  <meta />
  <%  %>
</head>

================================================================================
`;

exports[`html.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<html lang="<% re %>">
      <% ew %>
</html>

=====================================output=====================================
<html lang="<% re %>">
  <% ew %>
</html>

================================================================================
`;

exports[`link.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<head>
    <link rel="stylesheet" href="<%= static_url(@conn, "/css/embed.css") %>" />
</head>

=====================================output=====================================
<head>
  <link rel="stylesheet" href="<%= static_url(@conn, "/css/embed.css") %>" />
</head>

================================================================================
`;

exports[`meta.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<head>
    <meta name="description" content="<%= description(assigns) %>" />
  <meta name="viewport" content="width=device-width, initial-scale=<% %>" />
  <% if  do %>
    <meta name="viewport"/>
    <% r %>
  <% end %>
</head>

=====================================output=====================================
<head>
  <meta name="description" content="<%= description(assigns) %>" />
  <meta name="viewport" content="width=device-width, initial-scale=<%  %>" />
  <% if  do %>
    <meta name="viewport" />
    <% r %>
  <% end %>
</head>

================================================================================
`;

exports[`style.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<head>
  <style>
   <%  %>
  </style>
</head>
=====================================output=====================================
<head>
  <style>
    <%  %>
  </style>
</head>

================================================================================
`;

exports[`title.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<head>
  <title> <%  %> </title>
</head>
<head>
  <title> <%  %> </title>
</head>
<head>
  <title>e<%  %>e</title>
</head>
<head>
  <title>e <%  %> e</title>
</head>

=====================================output=====================================
<head>
  <title><% %></title>
</head>
<head>
  <title><% %></title>
</head>
<head>
  <title>e<% %>e</title>
</head>
<head>
  <title>e <% %> e</title>
</head>

================================================================================
`;
